# SciREX

./: .gitignore  .pylintrc  CONTRIBUTING.md  CONTRIBUTORS.md  CopyrightHeader.txt  PLATFORM.md  README.md  mkdocs.yml  post_quantized_mnist_model.tflite  pyproject.toml  pytest.ini  quantized_mnist_model.tflite  setup.py  test_model.net
.github/workflows/: code-quality-control.yml  copyright-check.yml  unit-tests.yml
docs/: index.md
docs/api/core/Contribution/: contribution.md
docs/api/core/dl/: base.md  fcnn.md  gcn.md  mlp.md  tensorflow_wrapper.md
docs/api/core/model_compression/: pruning.md  quantization.md
docs/api/core/tutorial/: classification_tutorial.md
docs/assets/: custom.css  custom.js
examples/dl/: README.md  cnn-mnist.py  cnn_mnist.py  fcnn-mnist.py  gcn_cora.py  vae_mnist.py
examples/dl/tf_backend/: examples_fcnn.py
examples/ml/supervised/classification/: README.md  example_logistic_regression.py  example_naive_bayes.py
examples/ml/supervised/regression/: example_lasso_regression.py  example_linear_regression.py  example_polynomial_regression.py  example_ridge_regression.py  example_svr.py
examples/ml/unsupervised/clustering/: README.md  example_kmeans.ipynb  example_kmeans.py
examples/model compression/: README.md  base_mnist.py  pruned_base_mnist.py  pruned_mnist.py  pruning.py  quantization.py  quantization__base_mnist.py  quantized_base_mnist.py  quantized_mnist.py  tensor_svd.py
examples/model_compression/: README.md  pruned_base_mnist.py  pruned_mnist.py  quantized_base_mnist.py  quantized_mnist.py  tensor_svd.py
examples/model_reduction_pipeline/: pruned_mnist.py  pruning.py  pruning_cnn_dl.py  quantization_mnist.py  quantized.py
examples/model_reduction_pipeline/pipeline/src/: datasets.py  main.py  main_script.py  model_cnn.py  models.py  pruning.py  quantization.py
examples/sciml/fastvpinns/forward_problems/: README.md  example_helmholtz2d.md  example_helmholtz2d.py  example_poisson2d.md  example_poisson2d.py
examples/sciml/fastvpinns/inverse_problems/: example_inverse_poisson2d.md  example_inverse_poisson2d.py
examples/sciml/fno/: example_advection.md  example_advection.py  example_burgers.py  example_heat.md  example_heat.py  example_poisson_2d.md  example_poisson_2d.py  example_wave.md  example_wave.py
examples/sciml/pinns/forward_problems/: example_maxwell.py  example_permafrost.py  example_poisson2d.py
requirements/: all.txt  fastvpinns.txt
sciml_models/forward_models/: common_inference.py  poisson_Al_Aiso_linear_Circle_inference.py  poisson_Al_Aiso_linear_Circle_train.py  poisson_Al_Aiso_linear_Square_inference.py  poisson_Al_Aiso_linear_Square_train.py  poisson_Al_Aiso_linear_inference.py  poisson_Al_Aiso_quad_Circle_inference.py  poisson_Al_Aiso_quad_Circle_train.py  poisson_Al_Aiso_quad_Square_inference.py  poisson_Al_Aiso_quad_Square_train.py  poisson_Al_Iso_Circle_inference.py  poisson_Al_Iso_Circle_train.py  poisson_Al_Iso_Square_inference.py  poisson_Al_Iso_Square_train.py  poisson_Cu_Aiso_linear_Circle_inference.py  poisson_Cu_Aiso_linear_Circle_train.py  poisson_Cu_Aiso_linear_Square_inference.py  poisson_Cu_Aiso_linear_Square_train.py  poisson_Cu_Aiso_quad_Circle_inference.py  poisson_Cu_Aiso_quad_Circle_train.py  poisson_Cu_Aiso_quad_Square_inference.py  poisson_Cu_Aiso_quad_Square_train.py  poisson_Cu_Iso_Circle_inference.py  poisson_Cu_Iso_Circle_train.py  poisson_Cu_Iso_Square_inference.py  poisson_Cu_Iso_Square_train.py
sciml_models/inverse_models/: poisson_Al_Iso_Circle_inverse_train.py  poisson_Al_Iso_Square_inverse_train.py  poisson_Cu_Iso_Circle_inverse_train.py  poisson_Cu_Iso_Square_inverse_train.py
scirex/core/Model_compression/: pruning.py  quantization.py
scirex/core/dl/: README.md  __init__.py  base.py  fcnn.py  gcn.py  mlp.py  tensorflow_wrapper.py  utils.py
scirex/core/dl/nn/: __init__.py  activation.py  metrics.py  others.py
scirex/core/dl/tf_backend/: __init__.py  activations.py  data.py  datautils.py  mathutils.py  optimizers.py
scirex/core/model_compression/: pruning.py  quantization.py
scirex/core/sciml/FE/: FE2D_Cell.py  basis_2d_QN_Chebyshev_2.py  basis_2d_QN_Jacobi.py  basis_2d_QN_Legendre.py  basis_2d_QN_Legendre_Special.py  basis_function_2d.py  basis_function_3d.py  fe2d_setup_main.py  fe_transformation_2d.py  fe_transformation_3d.py  fespace.py  fespace2d.py  quad_affine.py  quad_bilinear.py  quadratureformulas.py  quadratureformulas_quad2d.py
scirex/core/sciml/Geometry/: geometry.py  geometry_2d.py
scirex/core/sciml/deeponet/: base.py  unstacked.py
scirex/core/sciml/fastvpinns/: README.md
scirex/core/sciml/fe/: basis_2d_qn_chebyshev_2.py  basis_2d_qn_jacobi.py  basis_2d_qn_legendre.py  basis_2d_qn_legendre_special.py  basis_function_2d.py  basis_function_3d.py  fe2d_cell.py  fe2d_setup_main.py  fe_transformation_2d.py  fe_transformation_3d.py  fespace.py  fespace2d.py  quad_affine.py  quad_bilinear.py  quadratureformulas.py  quadratureformulas_quad2d.py
scirex/core/sciml/geometry/: geometry.py  geometry_2d.py
scirex/core/sciml/pinns/: README.md
scirex/core/sciml/utils/: compute_utils.py  plot_utils.py  print_utils.py
site/: 404.html  conf.py  index.html  objects.inv
site/assets/: custom.css
site/search/: search_index.json
src/core/sciml/FE/: FE2D_Cell.py  basis_2d_QN_Chebyshev_2.py  basis_2d_QN_Jacobi.py  basis_2d_QN_Legendre.py  basis_2d_QN_Legendre_Special.py  basis_function_2d.py  basis_function_3d.py  fe2d_setup_main.py  fe_transformation_2d.py  fe_transformation_3d.py  fespace.py  fespace2d.py  quad_affine.py  quad_bilinear.py  quadratureformulas.py  quadratureformulas_quad2d.py
tests/others/: test_copyright.py
tests/scirex/core/dl/: test_base.py  test_gcn.py  (+3 more)
tests/support_files/: chainlink_data.txt  engytime.txt  stator.mesh
(+278 files in other folders)
