[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scirex"
version = "1.0.0"
description = "Scientific Research and Engineering eXcellence Framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = [
    "scientific-computing",
    "machine-learning",
    "physics-informed-neural-networks",
    "differential-equations",
    "scientific-visualization"
]
authors = [
    { name = "Zenteiq Aitech Innovations Private Limited", email = "contact@zenteiq.ai" },
    { name = "AiREX Lab, Indian Institute of Science", email = "contact@airexlab.org" }
]
maintainers = [
    { name = "Zenteiq Aitech Innovations", email = "contact@scirex.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "jax",
    "jaxtyping",
    "equinox",
    "optax",
    "tensorflow==2.13.0",
    "meshio==5.3.4",
    "pyDOE==0.3.8",
    "tqdm==4.66.3",
    "scipy",
    "gmsh",
    "pyyaml",
    "black",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-env",
    "pytest-timeout",
    "pytest-xdist"
]

[project.optional-dependencies]
fastvpinns = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow==2.13.0",
    "meshio==5.3.4",
    "pyDOE==0.3.8",
    "tqdm==4.66.3",
    "scipy",
    "gmsh",
    "pyyaml",
]
dev = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-env",
    "pytest-timeout",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://scirex.org/"
Documentation = "https://scirex.org/doc/"
Repository = "https://github.com/zenoxml/SciREX"
"Bug Tracker" = "https://github.com/zenoxml/SciREX/issues"
"Research Blog" = "https://scirex.org/blog"

[tool.setuptools]
packages = ["scirex"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=scirex"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.coverage.run]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]